add additional versions of input validation animations

--- a/packages/components/src/components/text-input/_text-input.scss
+++ b/packages/components/src/components/text-input/_text-input.scss
@@ -321,15 +321,12 @@
   }
 
   // Validation Error Animations
-
-  // InputValidationOne
   .input-animation-one {
     .#{$prefix}--text-input--invalid {
       animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
     }
   }
 
-  // InputValidationTwo
   .input-animation-two {
     .bx--form-requirement {
       animation: shake 0.82s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
@@ -368,7 +365,6 @@
     }
   }
 
-  // InputValidationThree
   .input-animation-three {
     .bx--text-input__field-wrapper[data-invalid] + .underline {
       width: 0;
@@ -379,7 +375,6 @@
     }
   }
 
-  // Input ValidationFour
   .input-animation-four,
   .input-animation-five {
     .bx--text-input-wrapper {
@@ -399,7 +394,6 @@
     }
   }
 
-  // InputValidationFive
   .input-animation-five {
     .bx--text-input__field-wrapper[data-invalid] + .underline {
       margin-left: auto;
@@ -407,18 +401,73 @@
     }
   }
 
-  // InputValidationSix
-  // .input-animation-two {
+  .input-animation-six,
+  .input-animation-seven {
+    .bx--text-input__invalid-icon {
+      transform: translateY(-50%);
+      animation: $duration--slow-02 low-key-shake 0.1s
+        motion(standard, productive) forwards;
+    }
+  }
+
+  .input-animation-seven {
+    .bx--text-input__field-wrapper[data-invalid] #test2 {
+      border-bottom: 2px solid red;
+    }
+
+    #test2 {
+      outline: 0 !important;
+    }
+  }
+
+  .input-animation-seven,
+  .input-animation-nine {
+    .bx--text-input__field-wrapper[data-invalid] + .underline {
+      width: 100%;
+      height: 2px;
+      background-color: #da1e28;
+      transform: translateY(-2px);
+    }
+
+    #test2 {
+      outline: 0 !important;
+    }
+
+    .bx--text-input__field-wrapper[data-invalid] #test2 {
+      border: none !important;
+    }
+  }
+
+  .input-animation-eight,
+  .input-animation-nine {
+    .bx--text-input__invalid-icon {
+      transform: translateY(-50%);
+      opacity: 0;
+      animation: $duration--slow-02 rotate 0.3s motion(standard, productive)
+        forwards;
+      // animation: 1.5s rotate-two motion(standard, productive) 0.1s
+      //  forwards;
+    }
+  }
+
   // .bx--form__helper-text {
-  // transform: translate(16px, -32px);
-  // animation: 2s move-helper-text cubic-bezier(0.4, 0.14, 0.3, 1) forwards;
+  //   transform: translate(16px, -32px);
+  //   animation: 2s move-helper-text cubic-bezier(0.4, 0.14, 0.3, 1) forwards;
   // }
+
+  // input[data-invalid]:not(:focus) {
+  //    outline-color: pink !important;
+  // }
+
+  // input[data-invalid]:focus {
+  // // outline-color: pink !important;
   // }
 
   // keyframes
   @keyframes move-helper-text {
     100% {
-      transform: translate(16px, -32px);
+      // transform: translate(16px, -32px);
+      // transform: translate(-10px, -50%);
     }
   }
 
@@ -442,6 +491,122 @@
     40%,
     60% {
       transform: translate3d(4px, 0, 0);
+    }
+  }
+
+  @keyframes low-key-shake {
+    20% {
+      transform: translate(4px, -50%);
+    }
+
+    40% {
+      transform: translate(-4px, -50%);
+    }
+
+    60% {
+      transform: translate(2px, -50%);
+    }
+
+    80% {
+      transform: translate(-2%, -50%);
+    }
+    100% {
+      transform: translate(0, -50%);
+    }
+  }
+
+  @keyframes low-key-shake-and-rotate {
+    20% {
+      transform: translate(4px, -50%) rotate(15deg);
+    }
+
+    40% {
+      transform: translate(-4px, -50%) rotate(-15deg);
+    }
+
+    60% {
+      transform: translate(2px, -50%) rotate(13deg);
+    }
+
+    80% {
+      transform: translate(-2%, -50%) rotate(-13deg);
+    }
+
+    100% {
+      transform: translate(0, -50%) rotate(0);
+    }
+  }
+
+  @keyframes rotate {
+    10% {
+      opacity: 1;
+    }
+    20% {
+      transform: translateY(-50%) rotate(-40deg);
+    }
+
+    40% {
+      transform: translateY(-50%) rotate(40deg);
+    }
+
+    60% {
+      transform: translateY(-50%) rotate(-20deg);
+    }
+
+    80% {
+      transform: translateY(-50%) rotate(20deg);
+    }
+    100% {
+      transform: translateY(-50%) rotate(0);
+      opacity: 1;
+    }
+  }
+
+  @keyframes rotate-two {
+    10%,
+    90% {
+      transform: translateY(-50%) rotate(-50deg);
+    }
+
+    20%,
+    80% {
+      transform: translateY(-50%) rotate(50deg);
+    }
+
+    30%,
+    50%,
+    70% {
+      transform: translateY(-50%) rotate(-25deg);
+    }
+
+    40%,
+    60% {
+      transform: translateY(-50%) rotate(25deg);
+    }
+  }
+
+  @keyframes rotate-three {
+    15% {
+      transform: translateY(-50%) rotate(-50deg);
+    }
+
+    30% {
+      transform: translateY(-50%) rotate(50deg);
+    }
+
+    45% {
+      transform: translateY(-50%) rotate(-25deg);
+    }
+
+    60% {
+      transform: translateY(-50%) rotate(25deg);
+    }
+
+    75% {
+      transform: translateY(-50%) rotate(25deg);
+    }
+
+    90% {
     }
   }
 
